--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,4 +1,3 @@
-/ Navigation
 %nav.top-bar
   %ul.title-area
     / Title Area
@@ -13,12 +12,12 @@
     %ul.right
       - if user_signed_in?
         %li
-          %a{:href => "/logout"} Logout
+          = link_to 'Logout', signout_path
       - else
         %li
-          %a{:href => "/login"} Login
-      - if user_signed_in?
-        - if current_user.has_role? :admin
-          %li
-            = link_to 'Admin', users_path
-/ End Navigation
+          = link_to 'Login', signin_path
+      /- if user_signed_in?
+      /  - if current_user.has_role? :admin
+      /    %li
+      /      = link_to 'Admin', users_path
+
